--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "http-proxy-middleware": "^1.0.6",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
