--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "author": "Adewale Adeyemi",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
@@ -16,13 +18,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.5",
     "http-proxy-middleware": "^1.0.6",
     "husky": "^4.3.6",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.1",
